# gmic-qt

./: .gitmodules  CMakeLists.txt  README.md  bootstrap-digikam.sh  bootstrap-gmicqt.sh  bootstrap-none  bootstrap-none.sh  bootstrap.digikam  bootstrap.linux  bootstrap.macports  bootstrap.vcpkg  update_gmic-qt_directory.txt
cmake/modules/: MacroUtils.cmake
digiKam/: RulesDigikamHost.cmake  update_gmicqt.txt
digiKam/bqm/: BqmPluginRules.cmake  gmicbqmplugin.cpp  gmicbqmprocessor.cpp  gmicbqmprocessor.h  gmicbqmtool.cpp  gmicfilterchain.cpp  gmicfilterchain.h  gmicfilterchain_item.cpp  gmicfilterchain_p.h  gmicfilterchain_view.cpp  gmicfilterdialog.cpp  gmicfilterdialog.h  gmicfilterlistview.cpp  gmicfilterlistview.h  gmicfilterlistviewitem.cpp  gmicfilterlistviewitem.h  gmicfiltermngr.cpp  gmicfiltermngr.h  gmicfilternode.cpp  gmicfilternode.h  gmicfiltertooltip.cpp  gmicfiltertooltip.h  gmicfilterwidget.cpp  gmicfilterwidget.h  host_digikam_bqm.cpp
digiKam/common/: gmicqtcommon.cpp  gmicqtcommon.h  gmicqtimageconverter.cpp  gmicqtimageconverter.h  gmicqtwindow.cpp  gmicqtwindow.h
digiKam/editor/: EditorPluginRules.cmake  gmicqttoolplugin.h  host_digikam_editor.cpp
digiKam/patches/: 01_digikam_root_cmakelists.patch  02_digikam_disable_theming.patch  03_digikam_disable_hdpi.patch  04_digikam_disable_logo.patch  05_digikam_plugin_integration.patch
gmic/: gmic
gmicqt/: CMakeLists.txt
src/: DialogSettings.cpp  GmicQt.cpp  HeadlessProcessor.cpp  HtmlTranslator.cpp  MacroUtils.cmake  MainWindow.cpp  MainWindow.h  RulesDigikamHost.cmake  Settings.cpp
(+166 files in other folders)
